// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Multisig with Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "ETbeYRjjMAaD691EFYCT42A93UaAUh8JXoQ1yfKqXUDs1qe",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "FxnkJ9gMrVC5oGSVmBHnn7DqeuG7BFCiKw2KVNk1HuZ6Hxd",
      "callHash": "(hash)",
      "multisig": "ETbeYRjjMAaD691EFYCT42A93UaAUh8JXoQ1yfKqXUDs1qe",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "J8gK9LPHxCUnQq5dFtGdCkSNDyekWHUnT7EepuMpAKbG6uF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "Fd1fgPyvvRk9YNSzASX9DdY1XZVwEVDK9FqwxnwcnsaDEAz",
      "callHash": "(hash)",
      "multisig": "J8gK9LPHxCUnQq5dFtGdCkSNDyekWHUnT7EepuMpAKbG6uF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DXUH4cs1pFAxhhsctg5X4iHzDm9Mv9PESNhpUsxUsjseMYL",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "H4toWRwXdBLouUE7cDVjKpU8dWonGTGJHvrqqapeCpgrGX9",
      "callHash": "(hash)",
      "multisig": "GrzY74W4gYd3JdgGFXJqg1FpFWFhDpGFgVdGU3wHaJdqDsQ",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
